third_party/move/move-compiler-v2/tests/more-v1/parser/function_return_type_missing.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/function_return_type_missing.move:3:14
  │
3 │     fun f(): { }
  │              ^
  │              │
  │              Unexpected '{'
  │              Expected a type name
